feat: add account authentication and RBAC
